--- a/movie-app/src/app/app.component.scss
+++ b/movie-app/src/app/app.component.scss
@@ -26,3 +26,11 @@
   text-align: center;
   font-size: 16px;
 }
+body {
+  margin: 0;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: linear-gradient(to right, #ff9966, #ff5e62);
+}
