--- a/movie-app/src/app/components/movie-details/movie-details.component.html
+++ b/movie-app/src/app/components/movie-details/movie-details.component.html
@@ -1,4 +1,5 @@
-<div *ngIf="movie$ | async as movie" class="card">
+<div class="card">
+  @if(movie$ | async; as movie){
   <div class="img-container">
   <img src="https://image.tmdb.org/t/p/w200{{ movie.poster_path  }}" alt="{{ movie.original_title  }}">
   </div>
@@ -6,4 +7,5 @@
   <p>{{ movie.release_date }}</p>
   <p>{{ movie.overview }}</p>
   <button (click)="close()">Close</button>
+}
 </div>
